--- a/examples-atui/example.less
+++ b/examples-atui/example.less
@@ -58,6 +58,7 @@ body, .page {
 
 .page__hd, .miniprogram-root .page__hd{
     padding: 40px;
+    padding-bottom: 20px;
 }
 
 .page__bd {}
@@ -84,13 +85,13 @@ body, .page {
 }
 
 .page__title {
-    text-align: left;
+    text-align: center;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 200;
 }
 
 .page__desc,.h5-p {
-    margin-top: 4px;
+    margin-top: 10px;
 
     color: rgba(0,0,0,.5);
     text-align: left;
@@ -531,4 +532,13 @@ body, .page {
             padding:0;
         }
     }
+}
+
+// 个人添加的一些设置
+.page__bottom_tips {
+    padding: 40px !important; // 小程序里会覆盖 囧
+    font-size: 12px;
+}
+.page__bottom_tips p {
+    margin-bottom: 6px;
 }
